# Tongji_database_design

./: .gitignore  README.md  database_schema.sql
backend/: .gitignore  add_mock_data.py  app.py  check_data.py  check_data_volume.py  config.py  create_admin.py  extensions.py  fetch_gaode_data.py  pyproject.toml  regenerate_data.py  reset_db.py  seed_data.py  simulate_realtime.py  start.ps1  test_auth.py
backend/migrations/: add_audit_trigger.sql  add_email_verification.sql
backend/models/: __init__.py  audit_log.py  maintenance.py  prediction.py  road.py  traffic_event.py  traffic_status.py  user.py  weather.py
backend/routes/: __init__.py  admin.py  advanced_analytics.py  analytics.py  auth.py  events.py  export.py  mock.py  roads.py  smart_traffic.py  traffic.py
backend/utils/: analytics_service.py  backup_service.py  decorators.py  email_service.py  simulation.py  temp_storage.py  validators.py
frontend/: index.html  package.json  pnpm-lock.yaml  start.ps1
frontend/src/: App.vue  main.js
frontend/src/components/: EventFormDialog.vue  ForgotPassword.vue  StatusTag.vue  TrafficHistoryChart.vue  TrafficMap.vue  TrafficStatusFormDialog.vue  TrafficStatusPieChart.vue
frontend/src/layouts/: MainLayout.vue
frontend/src/pages/: test-analytics.html
frontend/src/router/: index.js
frontend/src/stores/: user.js
frontend/src/styles/: theme-bw.css
frontend/src/utils/: analytics.js  api.js  mockAnalyticsData.js  realtimeData.js  socket.js  test-imports.js  theme.js
frontend/src/views/: Admin.vue  AdvancedAnalytics.vue  Analytics.vue  Dashboard.vue  (+9 more)
(+10 files in other folders)
