[project]
name = "traffic-system-backend"
version = "0.1.0"
description = "城市交通状态查询系统后端"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-jwt-extended>=4.6.0",
    "flask-migrate>=4.0.5",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "pymysql>=1.1.0",
    "cryptography>=41.0.0",
    "flask-caching>=2.1.0",
    "flask-limiter>=3.5.0",
    "redis>=5.0.0",
    "flask-socketio>=5.3.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = [
    "*.db",
    "*.sqlite",
    "*.sqlite3",
    ".env",
    "__pycache__",
    "*.pyc",
]
